# Py-Tark-Hideout-Bot

./: README.md  __main__.py  bitcoin_miner.py  client.py  lavatory.py  logger.py  main.py  medstation.py  pyproject.toml  setup_msi.py  states.py  water_collector.py  workbench.py
.github/workflows/: python-build-msi.yml
detection/: image_rec.py
hideoutbot/: __main__.py
hideoutbot/bot/: client.py  states.py
hideoutbot/detection/: image_rec.py
hideoutbot/interface/: layout.py  stats.py
hideoutbot/stations/: bitcoin_miner.py  generator.py  lavatory.py  medstation.py  scav_case.py  water_collector.py  workbench.py
hideoutbot/utils/: logger.py
interface/: layout.py  stats.py
src/: client.py  states.py
src/stations/: water_collector.py  workbench.py
src/utils/: dependency.py
stations/: bitcoin_miner.py  generator.py  lavatory.py  medstation.py  water_collector.py  workbench.py
utils/: logger.py
